# ChangeLog for app-text/nfoview
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/nfoview/ChangeLog,v 1.26 2015/07/23 12:47:46 mrueg Exp $

  23 Jul 2015; Manuel Rüger <mrueg@gentoo.org> -nfoview-1.12.1.ebuild,
  -nfoview-1.9.1.ebuild:
  Remove old.

*nfoview-1.15.1 (26 Mar 2015)

  26 Mar 2015; Mike Frysinger <vapier@gentoo.org> +nfoview-1.15.1.ebuild,
  nfoview-9999.ebuild:
  Update to distutils-r1 #543960 by Andrew Udvare.

*nfoview-1.12.1 (21 Apr 2013)

  21 Apr 2013; Mike Frysinger <vapier@gentoo.org> +nfoview-1.12.1.ebuild,
  nfoview-9999.ebuild:
  Version bump #466520 by Andrew Udvare.

  08 Jun 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> nfoview-1.10.ebuild:
  x86 stable wrt bug #418651

  02 Jun 2012; Agostino Sarubbo <ago@gentoo.org> nfoview-1.10.ebuild:
  Stable for amd64, wrt bug #418651

  06 Dec 2011; Samuli Suominen <ssuominen@gentoo.org> nfoview-1.10.ebuild,
  nfoview-9999.ebuild:
  Require at least Python 3.2 wrt upstream documentation.

  06 Dec 2011; Samuli Suominen <ssuominen@gentoo.org> -nfoview-1.9.2.ebuild,
  -nfoview-1.9.5.ebuild:
  old

*nfoview-1.10 (06 Dec 2011)

  06 Dec 2011; Samuli Suominen <ssuominen@gentoo.org> +nfoview-1.10.ebuild,
  nfoview-9999.ebuild:
  Version bump (and update 9999 ebuild) to GTK+-3.x and Python 3.x version.

  20 Sep 2011; Michał Górny <mgorny@gentoo.org> nfoview-9999.ebuild:
  Migrate to git-2.

*nfoview-1.9.5 (12 Jun 2011)

  12 Jun 2011; Mike Frysinger <vapier@gentoo.org> +nfoview-1.9.5.ebuild:
  Version bump.

  12 Jun 2011; Mike Frysinger <vapier@gentoo.org> nfoview-9999.ebuild:
  Update git url #360989.

*nfoview-1.9.2 (15 Oct 2010)

  15 Oct 2010; Mike Frysinger <vapier@gentoo.org> +nfoview-1.9.2.ebuild:
  Version bump #341129 by Marco Paolone.

  09 Aug 2010; Markos Chandras <hwoarang@gentoo.org> nfoview-1.9.1.ebuild:
  Stable on amd64 wrt bug #331363

  08 Aug 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org> nfoview-1.9.1.ebuild: