@@ -4,8 +4,8 @@ DESCRIPTION=App that allows non-privileged apps to write utmp (login) info
 HOMEPAGE=http://www.redhat.com/
 KEYWORDS=alpha amd64 arm hppa ia64 ~mips ppc ppc64 s390 sh sparc x86
 LICENSE=|| ( MIT LGPL-2 )
-RDEPEND=!sys-libs/libutempter
+RDEPEND=!sys-libs/libutempter !dev-python/utmp
 SLOT=0
 SRC_URI=mirror://gentoo/utempter-0.5.5-6.src.rpm
 _eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	multilib	62927b3db3a589b0806255f3a002d5d3	rpm	b94b54b44f14d6bee3e966c8f5c86fba	toolchain-funcs	42408102d713fbad60ca21349865edb4	user	f54e098dd38ba1c0847a13e685b87747
-_md5_=fe765c2b0f51c3cf5090be30d7fdeef6
+_md5_=74f3574713e7997340896bd43d7b67da
