@@ -1,27 +1,27 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
-AUX utempter-0.5.5.6-build.patch 310 RMD160 b3f1c5c38b92d03299b7a05cf08cbc4524bf761e SHA1 76bfa03f46026cdb65a8d65984b6b5202c39a35a SHA256 580b9e1eb2a418edf1ac0f58aa5f0819fe6615bd9d2c52220ba22fadf3b66b97
-AUX utempter-0.5.5.6-no_utmpx.patch 768 RMD160 15453894e18a310a1569fd0f861dde38fc709a45 SHA1 bfa242c0069a9696f6a33e6dab6f1fe1e9647666 SHA256 d6e7b51a23c35d30adc75be556fb018ae7113c8c172c0e31946b28a5c265f0e8
-AUX utempter-0.5.5.6-soname-makefile-fix.patch 839 RMD160 ec820c1d6f02c9c240c5e8f851d9bed392b34950 SHA1 8b97c824458cdb9cbf09f0e242762928a3392b2f SHA256 ad1db5b94ad40f50da0862331ec08055d8606f1cd918865beedd2f7b4cc3d595
-DIST utempter-0.5.5-6.src.rpm 21099 RMD160 03803d03ab8334546fdc16b9a7f97a5e8f11f12b SHA1 eb669fa1c2093c1ad5b8da0826d9d99421f1d737 SHA256 617c28d579fa54349b8a706e8346c2442f2ef39523db7e0501701a0919651f3c
-EBUILD utempter-0.5.5.6.ebuild 1337 RMD160 b3a498606fb1a87f48cdd25e6f9c584a28dd7c06 SHA1 877a90c41d1b0c4664931640e57f665049cfdd09 SHA256 849c797d10773e55a4bb878217766a28c41616fd984946592ff1bb9a9399abf2
-MISC ChangeLog 6937 RMD160 f3efb37e4dd47def5df691385a1d971353adea93 SHA1 aa5b354314aac79174ecce52b99a8e6914e3055a SHA256 6d873dba1a75030ac363b2242a704ad35c72b522b8a786a574905dfd97d0f804
-MISC metadata.xml 183 RMD160 2710a096d20977020c02020e54e159495fb6e622 SHA1 b9251818a98e76db78fa23921a260ca8fc3e4547 SHA256 0903359b99ca4bfefc1aa654cc0c787e6b104ec133318f522842aab7e42f9286
+AUX utempter-0.5.5.6-build.patch 310 SHA256 580b9e1eb2a418edf1ac0f58aa5f0819fe6615bd9d2c52220ba22fadf3b66b97 SHA512 3dc62d5e7ce326524bf4373334d474f09fb48b65b6bd1e03fd08f4dcf88a0397194fcb0b04b7a67de5c960607c53b5cf0e456f74133e6d6fc4c208943c45ce22 WHIRLPOOL 93cae601b64630f22371b97bbcdaf4c35f2b5f1505edf7135c4a392635b9794183ee6086bc5b8c8c25c8f44546b3c6e782ec10ca8fe44e1c296c4a7df4b1ef4c
+AUX utempter-0.5.5.6-no_utmpx.patch 768 SHA256 d6e7b51a23c35d30adc75be556fb018ae7113c8c172c0e31946b28a5c265f0e8 SHA512 c6201252c8712578a5668346502f1143fabc717cb5be922a92f2af8787a1e757fa5d70aa447f5a2d6347d49edb6fce2106d21993cc6a0e85c111bd049efa3bf3 WHIRLPOOL 8b006c441f05bce2e525ff965bf5342e2bffe303ff7c70f65fe9bc99c68abb6a389d06eaec4ab91d792a724a3a382af5d2226e61306c966454b0222ca43dc076
+AUX utempter-0.5.5.6-soname-makefile-fix.patch 839 SHA256 ad1db5b94ad40f50da0862331ec08055d8606f1cd918865beedd2f7b4cc3d595 SHA512 a7bf938bd0cd9e486255f43dfa4436bfba63e1d21d14abf611128e41f9e8ce87b412f7ac15ad3c78c2c307e7c8ca45fe6c3ffd41a33bb4ae7f35b93547fff79b WHIRLPOOL 04d3b9b719ad2f61ae9d1aa5b2a82fa1cc6da78adc20cbc4458c5a9fb42b76878ad40ab997a73de998015a14ce88c7a01e685110e4e86d2d9d43834f49a2299d
+DIST utempter-0.5.5-6.src.rpm 21099 SHA256 617c28d579fa54349b8a706e8346c2442f2ef39523db7e0501701a0919651f3c
+EBUILD utempter-0.5.5.6.ebuild 1355 SHA256 b56036d28f99d0d5bc835f7d2ba7039234fe62dbd1e481e89ad39d6674938f79 SHA512 8dacc5276454d7eab31db79db34cdc96af50b5d5a3ac6a514856ad32c968dc73fe63104791ee921b97b3f2a9d37db622e734f1b7142fd3326f37dd2407e9156c WHIRLPOOL 978e37d355710f07f8c6762ccc60552b297b2f292faca1b74e6c2533172bcb72baba68a52bba1b4031490c2c4bd1c0cfeb2637bed014677429af92991cc78bc0
+MISC ChangeLog 7091 SHA256 602555eac9ea48a4a4db7f42ac6b9c6119899730acd69e92204a47014cc5faf2 SHA512 1129a089ab5d0b58bdc08cc72a1adf646f14ca9178a3a064713e35525d28a112d263d15e3282f4df75da38c8e85a69226ad5991ea9fe384d9dcc438557d969b2 WHIRLPOOL 314fffdb4804462a5f83adce3806b9d96da8ea8cdd93210a91860a377be81beac26e3d8c74952a7cea96fbbb6c862147115fe58ef6a4058256bb7eab4d4943a9
+MISC metadata.xml 183 SHA256 0903359b99ca4bfefc1aa654cc0c787e6b104ec133318f522842aab7e42f9286 SHA512 db31aeacd92ae0a3081eb18c65711705b0fb162a75e45b8b0c1775d3ebc11ef3260f5c9ea80c19d40a7ea3b1d086fcfe9417def53085dafc64677fb58d3a2659 WHIRLPOOL c8b29cb8cb38d204f2ec96033ac02369ae1c71148eb282e0d7cc1ad345e69467078dcf75d85f72477657d917f8ba69394f4cde850b9adf97d41ae1f75cc4c344
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2
 
-iQIcBAEBAgAGBQJPvZ6uAAoJELEHsLL7fEFW9wMQAJERwQvPG09ORxPEIpCfQPQB
-myGlUZAck1Muix/x9ah0KUj3Zkxkr6CMXC7G1C++tMmKhyj8XS9tmf01rXB/PSDO
-dc5pDEx9BCs0nlk6I/8ryed/olg3EhbdP0nfYzVUt5a0HoayNWq9uT4UBLJBumXx
-LhTEngssyKU3NvVIQjkyP57GnGMPvZFaygNS2rJ2F7WRX980yXM2l9z+EKDeoROI
-HfMelD8yLVPNlyB62RoTBpOffJv+M4eiXMH/wyfR35+rxSQUEVkZumpVzr2GQrBL
-E9kuyz3jt2SNLcWgN4nxvbGsgv/WRMyd5ha9R1w9yWKmlK6whxJVt+Br6ZCKqNTW
-myNXD9GB5Mt3YXUhdQVKxPIjGvsNNVDZqSDiwhfSuGpcwd3HoDtLdardkRQ0pNF/
-ClIJPSrRFkTbgRYq5j0Ow7sZ64C4KZqaSi47dI/2cz4NphBpAoNAwbDbV1xPTl3H
-7EGmo2QxsJlYHvS+hwjruVUxXJc/J8Jeb3vjA4Bv0sh4I648aTa4p+/ldI8oq7a4
-P40dSceZLTs9ei2qUr8Balkgwk+iKdtYV4jTg57QgmG2afO3SUzzP5EAbOxS2r/z
-99i7VYY0QMPbXK4wUfHrhBHSoswgttmrM9hcKuaqRL/G+9alivlm9R3lJmzOWAdC
-DgM2epsy59e9dcUtJfwL
-=v6Lg
+iQIcBAEBCAAGBQJVwYaiAAoJEPGu1DbS6WIA3HYP+gIC4ewKRc0YJ2+jqL0fSSbM
+1sDq961SaHaytInPsulkrjIMA0Lg27my4JtuHaiXH5uwvHiAYDa1AURlcSOidRi4
+P/H5H2fPp4o4t6bt0hlKD5IRAeVnKRhzacX56NOUPmscEx/pu6Q7kvZRC5kHKCqJ
+FRj45Eh+6rS/gt1+W29f56D7FvdJyvTNBKzxKJNlbQUEPzUeJQyV0iQoUQTQ6ztZ
+p7GFMq1/En/CeD5pzQNLSlTqPtPd/HzHkyk9NxYuRicUagBPiCBD0lpCrEmMSB6E
+gkSV6BJdErSNRGWQtYWddXEosoQZ27p04MbAPlrWpk1KONMMVVXn7e9EhHe2CDFC
+bqkHK+0hxJ/aqiBNVOSl3sUnjHd3aSQV1qSSIFrxy9Ip4clppBHGZ2EgDhY9oMOo
+5L5hrB1uUGWXoJtQJGP+kyVHV7P6Pw7mRFR2UnIdpNdD/izcpbMFJy2Pl5GWemYH
+bjel2zQJNp4RyTikYkRnguqf+37XU5Jhwqr/uGDZdrExqa3Uwy1/QVXzlh4b3wz6
+C4vFEyHTnHchaybKxf/Glmi18v4hObWhkquNDCl6WkrZUjUhaSfxzDvZBNASXLs1
+VhOZHyvBPOS5Ir5UKe+pNb7m9ZyHdeYu4L0Rm9/MavprII7PKbIxUQKeP4SU5APR
+iffaPtc+tdVoUezORmOu
+=DhbA
 -----END PGP SIGNATURE-----
